[package]
name = "wavesignal"
description = "This library includes the fundamental Signal class along with basic signal operations."
authors = ["sergiorf <sergio.rodriguez.freire@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sergiorf/rustwave.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
